platform/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: as-bank-dev
  labels:
    environment: dev
    team: platform
    cost-center: learning
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.35
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.35
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.35
