platform/dev/default-deny-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: as-bank-dev
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
